@startuml class-diagram
title Monster Maniac - Class Diagram
skinparam style strictuml

package "com.rpgengine.auth" {
    package "domain" {
        class User {
            - id: UUID
        }
    }
}

package "com.rpgengine.combat" {
    package "combat.domain" {
        class Monster {
            - id: UUID
            - name: String
            - level: int
            - stats: CharacterStats
        }
        class CombatEngine {
            + simulate(char, equip, monster): CombatResult
        }
        class CombatResult {
            - isVictory: boolean
        }
        class CombatLog {
            - events: List<CombatEvent>
        }
        interface StatusEffect {
            + apply(health: int): EffectResult
        }
        class CombatHistory {
            - isVictory: boolean
            - damageDealt: int
        }
        CombatEngine ..> CombatResult
        CombatEngine ..> StatusEffect
        CombatResult -> CombatLog
    }
    
    package "combat.application" {
        class CombatService {
            + fight(charId, monsterId): CombatResponse
        }
        class MonsterService {
            + getAllMonsters(): List<Monster>
        }
    }
}

@enduml
